--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,21 +1,25 @@
 {
-	// Use IntelliSense to learn about possible attributes.
-	// Hover to view descriptions of existing attributes.
-	// For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-	{
-		"version": "0.2.0",
-		"configurations": [
-			{
-				"type": "zshdb",
-				"request": "launch",
-				"name": "Execute testmac.sh",
-				"program": "${workspaceFolder}/testmac.sh",
-				"cwd": "${workspaceFolder}",
-				"args": [],
-				"presentation": {
-					"reveal": "always",
-					"panel": "new"
-				}
-			}
-		]
-	}
+    "version": "0.2.0",
+    "configurations": [
+      {
+        "name": "Debug Push_swap",
+        "type": "cppdbg",
+        "request": "launch",
+        "program": "${workspaceFolder}/push_swap",
+        "args": ["7", "4", "9", "2", "6", "0", "1", "8", "3"],
+        "stopAtEntry": false,
+        "cwd": "${workspaceFolder}",
+        "environment": [],
+        "externalConsole": false,
+        "MIMode": "lldb",
+        "setupCommands": [
+          {
+            "description": "Enable pretty-printing for gdb",
+            "text": "-enable-pretty-printing",
+            "ignoreFailures": false
+          }
+        ],
+		"preLaunchTask": "Build"
+      }
+    ]
+}
